# CS225-FinalProject

./: .gitignore  CMakeLists.txt  Makefile  README.md  Team Contract.md
.github/workflows/: cmake.yml
data/: Map_of_Police_Stations__2011_.csv  medium.edge.txt  medium.node.txt  small.edge.txt  small.node.txt
docs/: dev_log.md  project_proposal.md  results.md  team_contract.md
entry/: main.cpp
lib/cs225/: RGB_HSL.h
src/: animation.cpp  animation.h  coord.cpp  coord.h  filereader.cpp  filereader.h  kdtree.cpp  kdtree.h  kdtree.hpp  mst.cpp  mst.h  sf_map.cpp  sf_map.h  sf_map_helpers.cpp
tests/: large.dge.txt  large.edge.txt  large.node.txt  medium.edge.txt  medium.node.txt  small.edge.txt  small.node.txt  tests.cpp
